Modernize to Spring Boot 4.1 / Spring AI 2.0 / Java 25
Versions:
- Spring Boot 3.5.8 -> 4.1.0, Spring AI 1.1.0 -> 2.0.0, Java 21 -> 25
- pgvector pg16 -> pg17; CI setup-java v4 + Java 25
- Drop unused deps: spring-ai-mcp, spring-ai-advisors-vector-store (removed in AI 2.0)

Major-upgrade fixes:
- Jackson 3 no longer defaults a missing primitive; ChatRequest.useRag -> Boolean (defaults true)
- HttpStatus.PAYLOAD_TOO_LARGE -> CONTENT_TOO_LARGE (Spring 7)
- Flatten AI 2.0 props (openai.chat.options.model -> openai.chat.model)
- TokenTextSplitter builder instead of deprecated constructor

Bug fixes / quality:
- Wire DocumentTools via defaultTools (tool-calling was dead)
- OpenAI-compatible streaming: serialized chunk records + [DONE], reachable via body stream flag
- Populate RAG source citations on /api/v2/chat (ChatResponseReader, shared with /v1)
- Dedupe DocumentService into one ingest pipeline; remove dead code/redundant endpoints
- Global RFC 9457 ProblemDetail error handling
- Retrieval tuning: smaller chunks + 0.3 similarity threshold
- Virtual threads; pattern matching / sequenced-collection idioms

Config:
- OpenRouter profile (application-openrouter.yaml) for any OpenAI-compatible provider
- README + architecture/layout diagrams refreshed to match the code