@@ -1,16 +1,14 @@
 package com.arvindand.rag.controller;
 
+import com.arvindand.rag.service.ChatResponseReader;
 import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
 import java.util.UUID;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.chat.client.ChatClientResponse;
 import org.springframework.ai.chat.memory.ChatMemory;
-import org.springframework.ai.document.Document;
-import org.springframework.ai.rag.advisor.RetrievalAugmentationAdvisor;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.MediaType;
+import org.springframework.http.codec.ServerSentEvent;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -20,17 +18,17 @@ import org.springframework.web.bind.annotation.RestController;
 import reactor.core.publisher.Flux;
 
 /**
- * OpenAI-compatible API controller for integration with chat UIs like Open WebUI.
- *
- * <p>Implements the OpenAI Chat Completions API specification to enable seamless integration with
- * existing chat interfaces and tools.
+ * OpenAI-compatible Chat Completions API, so chat UIs such as Open WebUI can talk to this service.
  *
  * <p>Exposes two models:
  *
  * <ul>
- *   <li><b>spring-ai-chat</b> - General conversation without RAG
- *   <li><b>spring-ai-rag</b> - Document-grounded responses using uploaded documents
+ *   <li><b>spring-ai-chat</b> — general conversation without RAG
+ *   <li><b>spring-ai-rag</b> — document-grounded responses with source citations
  * </ul>
+ *
+ * <p>Streaming is selected by the {@code stream} field in the request body (per the OpenAI spec),
+ * and chunks are serialised as proper Server-Sent Events rather than hand-assembled JSON.
  *
  * @author Arvind Menon
  */
@@ -43,29 +41,25 @@ public class OpenAICompatibleController {
 
   private final ChatClient ragChatClient;
   private final ChatClient simpleChatClient;
+  private final ChatResponseReader reader;
 
   public OpenAICompatibleController(
       @Qualifier("chatClient") ChatClient ragChatClient,
-      @Qualifier("simpleChatClient") ChatClient simpleChatClient) {
+      @Qualifier("simpleChatClient") ChatClient simpleChatClient,
+      ChatResponseReader reader) {
     this.ragChatClient = ragChatClient;
     this.simpleChatClient = simpleChatClient;
+    this.reader = reader;
   }
 
   /**
-   * OpenAI-compatible chat completions endpoint.
-   *
-   * <p>Accepts requests in the OpenAI format and returns responses compatible with OpenAI's API,
-   * enabling use with Open WebUI and similar tools.
-   *
-   * <p>Model selection:
-   *
-   * <ul>
-   *   <li><b>spring-ai-rag</b> - Uses RAG to answer from uploaded documents (includes sources)
-   *   <li><b>spring-ai-chat</b> (default) - General conversation with memory
-   * </ul>
+   * OpenAI-compatible chat completions. Returns a single JSON response, or an SSE stream of
+   * {@code chat.completion.chunk} events when {@code stream} is {@code true}.
    */
-  @PostMapping("/chat/completions")
-  public ChatCompletionResponse chatCompletions(
+  @PostMapping(
+      value = "/chat/completions",
+      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.TEXT_EVENT_STREAM_VALUE})
+  public Object chatCompletions(
       @RequestBody ChatCompletionRequest request,
       @RequestHeader(value = "Authorization", required = false) String authHeader) {
 
@@ -73,8 +67,14 @@ public class OpenAICompatibleController {
     String userMessage = extractLastUserMessage(request.messages());
     ChatClient client = selectClient(request.model());
 
-    // Use chatClientResponse() to access document context for RAG
-    ChatClientResponse clientResponse =
+    return Boolean.TRUE.equals(request.stream())
+        ? stream(client, request.model(), userMessage, conversationId)
+        : complete(client, request.model(), userMessage, conversationId);
+  }
+
+  private ChatCompletionResponse complete(
+      ChatClient client, String model, String userMessage, String conversationId) {
+    ChatClientResponse response =
         client
             .prompt()
             .user(userMessage)
@@ -82,78 +82,20 @@ public class OpenAICompatibleController {
             .call()
             .chatClientResponse();
 
-    String content = extractContent(clientResponse);
-
-    // For RAG model, append sources if available
-    if (MODEL_RAG.equalsIgnoreCase(request.model())) {
-      String sources = extractSources(clientResponse);
+    String content = reader.text(response);
+    if (MODEL_RAG.equalsIgnoreCase(model)) {
+      List<String> sources = reader.sources(response);
       if (!sources.isEmpty()) {
-        content = content + "\n\n---\n**Sources:** " + sources;
+        content += "\n\n---\n**Sources:** " + String.join(", ", sources);
       }
     }
-
-    return ChatCompletionResponse.of(request.model(), content);
+    return ChatCompletionResponse.of(model, content);
   }
 
-  /** Safely extracts content from ChatClientResponse. */
-  private String extractContent(ChatClientResponse response) {
-    var chatResponse = response.chatResponse();
-    if (chatResponse == null) {
-      return "";
-    }
-    var result = chatResponse.getResult();
-    if (result == null) {
-      return "";
-    }
-    var output = result.getOutput();
-    if (output == null) {
-      return "";
-    }
-    String text = output.getText();
-    return text != null ? text : "";
-  }
-
-  /** Extracts source document names from the RAG context. */
-  private String extractSources(ChatClientResponse response) {
-    Object docsObj = response.context().get(RetrievalAugmentationAdvisor.DOCUMENT_CONTEXT);
-    if (!(docsObj instanceof List<?> docsList) || docsList.isEmpty()) {
-      return "";
-    }
-    Set<String> sourceNames = new TreeSet<>();
-    for (Object doc : docsList) {
-      if (doc instanceof Document document) {
-        addSourceName(document, sourceNames);
-      }
-    }
-    return String.join(", ", sourceNames);
-  }
-
-  /** Extracts and adds source name from document metadata. */
-  private void addSourceName(Document document, Set<String> sourceNames) {
-    Object source = document.getMetadata().get("source");
-    if (source == null) {
-      return;
-    }
-    String sourceName = source.toString();
-    int lastSlash = sourceName.lastIndexOf('/');
-    if (lastSlash >= 0) {
-      sourceName = sourceName.substring(lastSlash + 1);
-    }
-    sourceNames.add(sourceName);
-  }
-
-  /** Streaming chat completions endpoint. */
-  @PostMapping(
-      value = "/chat/completions",
-      params = "stream=true",
-      produces = MediaType.TEXT_EVENT_STREAM_VALUE)
-  public Flux<String> streamChatCompletions(
-      @RequestBody ChatCompletionRequest request,
-      @RequestHeader(value = "Authorization", required = false) String authHeader) {
-
-    String conversationId = deriveConversationId(authHeader);
-    String userMessage = extractLastUserMessage(request.messages());
-    ChatClient client = selectClient(request.model());
+  private Flux<ServerSentEvent<Object>> stream(
+      ChatClient client, String model, String userMessage, String conversationId) {
+    String id = "chatcmpl-" + shortId();
+    long created = epochSeconds();
 
     return client
         .prompt()
@@ -161,35 +103,15 @@ public class OpenAICompatibleController {
         .advisors(advisor -> advisor.param(ChatMemory.CONVERSATION_ID, conversationId))
         .stream()
         .content()
-        .map(chunk -> formatStreamChunk(request.model(), chunk));
-  }
-
-  /**
-   * Selects the appropriate ChatClient based on model name. Uses RAG client for "spring-ai-rag",
-   * simple client for everything else.
-   */
-  private ChatClient selectClient(String model) {
-    if (MODEL_RAG.equalsIgnoreCase(model)) {
-      return ragChatClient;
-    }
-    return simpleChatClient;
-  }
-
-  /**
-   * Derives a stable conversation ID from the authorization header. This allows Open WebUI sessions
-   * to maintain conversation continuity.
-   */
-  private String deriveConversationId(String authHeader) {
-    if (authHeader != null && !authHeader.isBlank()) {
-      return "session-" + Integer.toHexString(authHeader.hashCode());
-    }
-    return "default-session";
+        .map(chunk -> sse(ChatCompletionChunk.delta(id, created, model, chunk)))
+        .concatWith(Flux.just(sse(ChatCompletionChunk.stop(id, created, model))))
+        .concatWith(Flux.just(ServerSentEvent.<Object>builder().data("[DONE]").build()));
   }
 
   /** Lists available models (required by Open WebUI). */
   @GetMapping("/models")
   public ModelsResponse listModels() {
-    long now = System.currentTimeMillis() / 1000;
+    long now = epochSeconds();
     return new ModelsResponse(
         "list",
         List.of(
@@ -197,43 +119,45 @@ public class OpenAICompatibleController {
             new Model(MODEL_RAG, "model", now, "spring-ai")));
   }
 
+  private ChatClient selectClient(String model) {
+    return MODEL_RAG.equalsIgnoreCase(model) ? ragChatClient : simpleChatClient;
+  }
+
+  /** Derives a stable conversation id from the Authorization header for session continuity. */
+  private String deriveConversationId(String authHeader) {
+    return (authHeader == null || authHeader.isBlank())
+        ? "default-session"
+        : "session-" + Integer.toHexString(authHeader.hashCode());
+  }
+
+  /** Returns the most recent user message, falling back to the last message of any role. */
   private String extractLastUserMessage(List<Message> messages) {
     if (messages == null || messages.isEmpty()) {
       return "";
     }
-    // Find the last user message
-    for (int i = messages.size() - 1; i >= 0; i--) {
-      if ("user".equals(messages.get(i).role())) {
-        return messages.get(i).content();
-      }
-    }
-    return messages.get(messages.size() - 1).content();
+    return messages.reversed().stream()
+        .filter(message -> "user".equalsIgnoreCase(message.role()))
+        .map(Message::content)
+        .findFirst()
+        .orElseGet(() -> messages.getLast().content());
   }
 
-  private String formatStreamChunk(String model, String content) {
-    return """
-    data: {"id":"chatcmpl-%s","object":"chat.completion.chunk","model":"%s","choices":[{"delta":{"content":"%s"},"index":0}]}
-
-    """
-        .formatted(UUID.randomUUID().toString().substring(0, 8), model, escapeJson(content));
+  private static ServerSentEvent<Object> sse(Object data) {
+    return ServerSentEvent.<Object>builder().data(data).build();
   }
 
-  private String escapeJson(String text) {
-    return text.replace("\\", "\\\\")
-        .replace("\"", "\\\"")
-        .replace("\n", "\\n")
-        .replace("\r", "\\r")
-        .replace("\t", "\\t");
+  private static String shortId() {
+    return UUID.randomUUID().toString().substring(0, 8);
   }
 
-  // Request/Response DTOs following OpenAI API spec
+  private static long epochSeconds() {
+    return System.currentTimeMillis() / 1000;
+  }
+
+  // --- Request/response DTOs following the OpenAI API spec (serialised by Jackson) ---
 
   public record ChatCompletionRequest(
-      String model,
-      List<Message> messages,
-      Double temperature,
-      Integer max_tokens,
-      Boolean stream) {}
+      String model, List<Message> messages, Double temperature, Integer max_tokens, Boolean stream) {}
 
   public record Message(String role, String content) {}
 
@@ -241,9 +165,9 @@ public class OpenAICompatibleController {
       String id, String object, long created, String model, List<Choice> choices, Usage usage) {
     public static ChatCompletionResponse of(String model, String content) {
       return new ChatCompletionResponse(
-          "chatcmpl-" + UUID.randomUUID().toString().substring(0, 8),
+          "chatcmpl-" + shortId(),
           "chat.completion",
-          System.currentTimeMillis() / 1000,
+          epochSeconds(),
           model != null ? model : MODEL_CHAT,
           List.of(new Choice(0, new ResponseMessage("assistant", content), "stop")),
           new Usage(0, 0, 0));
@@ -255,6 +179,31 @@ public class OpenAICompatibleController {
   public record ResponseMessage(String role, String content) {}
 
   public record Usage(int prompt_tokens, int completion_tokens, int total_tokens) {}
+
+  public record ChatCompletionChunk(
+      String id, String object, long created, String model, List<ChunkChoice> choices) {
+    static ChatCompletionChunk delta(String id, long created, String model, String content) {
+      return new ChatCompletionChunk(
+          id,
+          "chat.completion.chunk",
+          created,
+          model,
+          List.of(new ChunkChoice(0, new Delta("assistant", content), null)));
+    }
+
+    static ChatCompletionChunk stop(String id, long created, String model) {
+      return new ChatCompletionChunk(
+          id,
+          "chat.completion.chunk",
+          created,
+          model,
+          List.of(new ChunkChoice(0, new Delta(null, null), "stop")));
+    }
+  }
+
+  public record ChunkChoice(int index, Delta delta, String finish_reason) {}
+
+  public record Delta(String role, String content) {}
 
   public record ModelsResponse(String object, List<Model> data) {
     public ModelsResponse {
